Replace repaint calls with update calls

BUG:432936
(cherry picked from commit 104c45aa4a56a90f431f8e4130061ba9bcf7081b)